--- a/chatRoomService/ChatRoomService.csproj
+++ b/chatRoomService/ChatRoomService.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C2BF3B45-5039-4345-8A38-770ECC5D5B55}</ProjectGuid>
+    <ProjectGuid>{519D4E1A-350C-422B-9655-3F435CF18961}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>chatWithOther</RootNamespace>
-    <AssemblyName>chatWithOther</AssemblyName>
+    <RootNamespace>chatRoomService</RootNamespace>
+    <AssemblyName>chatRoomService</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -44,26 +44,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ChatRoom.cs">
+    <Compile Include="ChatRoomService.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ChatRoom.Designer.cs">
-      <DependentUpon>ChatRoom.cs</DependentUpon>
-    </Compile>
-    <Compile Include="LoginForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="LoginForm.Designer.cs">
-      <DependentUpon>LoginForm.cs</DependentUpon>
+    <Compile Include="ChatRoomService.Designer.cs">
+      <DependentUpon>ChatRoomService.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="ChatRoom.resx">
-      <DependentUpon>ChatRoom.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="LoginForm.resx">
-      <DependentUpon>LoginForm.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
